testando deploy de uma nova pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 loguru = "^0.7.3"
 streamlit = "^1.43.1"
+requests = "^2.32.3"
+python-dotenv = "^1.0.1"
+pydantic = "^2.10.6"
 
 
 [build-system]
