--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ streamlit = "^1.43.1"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 pydantic = "^2.10.6"
+sqlalchemy = "^2.0.38"
+psycopg2 = "^2.9.10"
 
 
 [build-system]
