--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ win32_setctime==1.2.0
 requests==2.32.3
 python-dotenv==1.0.1
 pydantic==2.10.6
+duckdb==0.9.2
+airflow-provider-duckdb==0.2.0
+astro-sdk-python[duckdb]==1.6.1
+apache-airflow-providers-postgres
